--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2477,5 +2477,10 @@ GER_reform_wave:0 "Reform Wave"
  GER_social_welfare:0 "Wellfare State"
  GER_social_welfare_desc:0 "Not everyone is as rich as a Kuromorimine Queen so helping the welfare of the poorer students is the top priority. Everyone needs a place to stay if we are to remain stable."
 
+GER_new_constitution:0 "Frankfurt Constitution"
+ GER_new_constitution_desc:0 "With the end of elections in Kuromorimine, the time to draft a constitution has come, to deliver us from the mistakes of old, the time is now to forge a new destiny"
+
+
+
 
 
