chihatan barebones shit
I wanna fucking kill myself

--- a/localisation/replace/gup_replace_l_english.yml
+++ b/localisation/replace/gup_replace_l_english.yml
@@ -23,7 +23,7 @@
  JAP_greater_east_asian_co_prosperity_sphere: "Chi-Ha-Tan Sphere"
  JAP_greater_east_asian_co_prosperity_sphere_desc: "Let us show to the other contenders that we can have principles to move us forward; and one of those principles shall be that of being able to correct and change one's self dynamically to see what is fit for any given situation."
  JAP_intervene_in_china: "Marco Polo Bridge Incident"
- JAP_intervene_in_china_desc: "[Root.GetNameDefCap] is poor in resources, but our neighbours are not. We must take from them what we lack, and only require an excuse to begin doing so. Such an excuse could be provided by a few enterprising students, after which the [ROOT.GetFirstTitle] will have no choice but to assent to a war, no matter how ill-prepared..."
+ JAP_intervene_in_china_desc: "China is poor in resources, but our neighbours are not. We must take from them what we lack, and only require an excuse to begin doing so. Such an excuse could be provided by a few enterprising students, after which high command will have no choice but to assent to a war, no matter how ill-prepared..."
  JAP_strike_south_doctrine: "Kyoushin Kyougi"
  JAP_strike_south_doctrine_desc: "Though rich, China does not possess all resources we require. Not far away to the south, though, lie the Dutch East Indies and the [ENG.GetAdjective] colonies of Malaya and Borneo. For true self-sufficiency we must wrest control over these area away from the fake European imperialists."
  JAP_secure_china: "Secure China"
@@ -59,7 +59,7 @@
  JAP_spiritual_mobilization: "Spiritual Mobilization"
  JAP_spiritual_mobilization_desc: "By cultivating those tenets of Shinto that play on the constituents' sense of military duty we can increase the amount of new recruits."
  JAP_warrior_spirit: "Warrior Spirit"
- JAP_warrior_spirit_desc: "State Shinto allows us to instill in the people the need to sacrifice oneself for the good of the academy and the [ROOT.GetFirstTitle]."
+ JAP_warrior_spirit_desc: "State Shinto allows us to instill in the people the need to sacrifice oneself for the good of the academy."
  JAP_support_the_kodoha_faction: "Support the Tamada Faction"
  JAP_support_the_kodoha_faction_desc: "Fukuda and her reform camp are too revisionist in their ideas. We must ensure that remain who we are and it seems Tamada may as well know that path as such."
  JAP_showa_restoration: "Nishi Restoration"
