--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2480,6 +2480,35 @@ GER_reform_wave:0 "Reform Wave"
 GER_new_constitution:0 "Frankfurt Constitution"
  GER_new_constitution_desc:0 "With the end of elections in Kuromorimine, the time to draft a constitution has come, to deliver us from the mistakes of old, the time is now to forge a new destiny"
 
+# final nail
+ GER_eradicate_nishizumism:0 "Final Nail in the Coffin"
+ GER_eradicate_nishizumism_desc:0 "Whilst Maho and Erika have been dealt with, their influence over some still remains, and will continue to remain unless we put effort into wiping it off the face of the earth completely. Their ideas must never rise again"
+
+GER_anti_fasisct_prop:0 "Anti Authoritarian Propaganda"
+GER_anti_fasisct_prop_desc:0 "The reason why Maho rose to power was due to fear and anger over our defeat, if we are are to stand as a beacon of Democracy and liberty we must ensure such movements do not happen abroad. This can be accomplished through many means, propaganda and military intervention, the first is preferable but in time we may require preemptive action against authoritarian states"
+
+GER_prepare_coups:0 "Prepare Democratic Forces"
+GER_prepare_coups_desc:0 "Through back channels and embassy staff we have the opportunity to make contact with like minded officers who are sympathetic to our cause of restoring democracy in their nations. With the proper funding and support they could take their nations back from the tyrants who rule their states, and we shall provide such support to protect democracy wherever we can."
+
+GER_against_tyranny:0 "The Great Crusade"
+GER_against_tyranny_desc:0 "Its clear, that standing by isnt acceptable we must act now, we must preemptively destroy these dictatorships to be truly safe"
+
+GER_peace_our_time:0 "Peace in our Time"
+GER_peace_our_time_desc:0 "With many of the greatest threats to democracy, there shall truly be peace in our time, and perhaps forever"
+
+GER_prepare_italian_invasion:0 "Ready the Oven"
+GER_prepare_italian_invasion_desc:0 "Anzio has the most disturbing form of authoritarianism, while we are confident that they would fall quickly, one must not be lulled in by false security"
+
+GER_partition_italy:0 "Put In the Pizza"
+GER_partition_italy_desc:0 "Anzio is far to large for its own good, the fact is it should not control several parts of land, and should be brought down a peg only then can they be a true democracy"
+
+
+GER_war_italy:0 "Cook the Pizza"
+GER_war_italy_desc:0 "Anzio will be brought under proper adminstration, and it will unfortuantly require violence to accomplish, but victory requires sacrifice."
+
+# elections unable to put in due to the desc and titles being somewhere else
+# GER_miho_victory_desc:0 "Miho is the only person who can save our nations democracy"
+# GER_miho_victory:0  "Miho's Victory"
 
 
 
