--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -367,10 +367,10 @@
  SWI_fascism_DEF:1 "the Imperial Helvetic Confederation"
  SWI_democratic:0 "Neutrality Republic"
  SWI_democratic_DEF:1 "the Neutrality Confederation"
- SWI_neutrality:1 "Helvetic Junta"
- SWI_neutrality_DEF:1 "The Helvetic Junta"
- SWI_communism:0 "United Cantons"
- SWI_communism_DEF:0 "the United Cantons"
+ SWI_neutrality:1 "Neutrality Junta"
+ SWI_neutrality_DEF:1 "Neutrality Junta"
+ SWI_communism:0 "Peoples Republic of Neutrality"
+ SWI_communism_DEF:0 "Peoples Republic of Neutrality"
  SWI_fascism_ADJ:1 "Helvetic"
  SWI_democratic_ADJ:0 "Swiss"
  SWI_neutrality_ADJ:1 "Helvetic"
@@ -379,7 +379,7 @@
  SWI_fascism_subject_DEF:0 "the $OVERLORDADJ$ Alpine Territories"
  SWI_democratic_subject:0 "$OVERLORDADJ$ Helvetia"
  SWI_democratic_subject_DEF:0 "Helvetic"
- SWI:0 "Switzerland"
+ SWI:0 "Neutrality"
  SWI_DEF:0 "Switzerland"
  SWI_ADJ:0 "Swiss"
  TUR_fascism:1 "Kebab Empire"
@@ -454,12 +454,12 @@
  NOR_subject_DEF:0 "$OVERLORDADJ$ $NOR$"
  DEN_fascism:0 "North Sea Empire"
  DEN_fascism_DEF:0 "the North Sea Empire"
- DEN_democratic:0 "Denmark"
- DEN_democratic_DEF:0 "Denmark"
- DEN_neutrality:0 "Kingdom of Denmark"
- DEN_neutrality_DEF:0 "the Kingdom of Denmark"
- DEN_communism:0 "Danish Civil Union"
- DEN_communism_DEF:0 "the Danish Civil Union"
+ DEN_democratic:0 "Danmǫrk"
+ DEN_democratic_DEF:0 "Danmǫrk"
+ DEN_neutrality:0 "Kingdom of Danmǫrk"
+ DEN_neutrality_DEF:0 "the Kingdom of Danmǫrk"
+ DEN_communism:0 "Danmǫrk Civil Union"
+ DEN_communism_DEF:0 "the Danmǫrk Civil Union"
  DEN_fascism_ADJ:0 "Danish"
  DEN_democratic_ADJ:0 "Danish"
  DEN_neutrality_ADJ:0 "Danish"
@@ -632,17 +632,17 @@
  CAN_democratic_ADJ:0 "Canadian"
  CAN_neutrality_ADJ:0 "Canadian"
  CAN_communism_ADJ:0 "Canadian"
- CAN:0 "Canada"
+ CAN:0 "Maple"
  CAN_DEF:0 "Canada"
  CAN_ADJ:0 "Canadian"
- CHI_fascism:0 "Reorganized Nationalist China"
- CHI_fascism_DEF:0 "Reorganized Nationalist China"
- CHI_democratic:0 "Republic of China"
- CHI_democratic_DEF:0 "the Republic of China"
- CHI_neutrality:0 "China"
- CHI_neutrality_DEF:0 "China"
- CHI_communism:0 "Chinese People's Republic"
- CHI_communism_DEF:0 "the Chinese People's Republic"
+ CHI_fascism:0 "Reorganized Nationalist Zhongguo"
+ CHI_fascism_DEF:0 "Reorganized Nationalist Zhongguo"
+ CHI_democratic:0 "Republic of Zhongguo"
+ CHI_democratic_DEF:0 "the Republic of Zhongguo"
+ CHI_neutrality:0 "Zhongguo"
+ CHI_neutrality_DEF:0 "Zhongguo"
+ CHI_communism:0 "Zhongguo People's Republic"
+ CHI_communism_DEF:0 "the Zhongguo People's Republic"
  CHI_fascism_ADJ:0 "Chinese"
  CHI_democratic_ADJ:0 "Chinese"
  CHI_neutrality_ADJ:0 "Chinese"
@@ -668,19 +668,19 @@
  CHI_autonomy_supervised_state_DEF:0 "$OVERLORDADJ$ China"
  # For specific Japanese Puppet names, see countries_cosmetic
 
- PRC_fascism:0 "Chinese Empire"
- PRC_fascism_DEF:0 "the Chinese Empire"
- PRC_democratic:0 "Chinese Republic"
- PRC_democratic_DEF:0 "the Chinese Republic"
- PRC_neutrality:0 "China"
- PRC_neutrality_DEF:0 "China"
- PRC_communism:1 "Communist China"
- PRC_communism_DEF:1 "Communist China"
+ PRC_fascism:0 "Zhongguo Empire"
+ PRC_fascism_DEF:0 "the Zhongguo Empire"
+ PRC_democratic:0 "Zhongguo Republic"
+ PRC_democratic_DEF:0 "the Zhongguo Republic"
+ PRC_neutrality:0 "Zhongguo"
+ PRC_neutrality_DEF:0 "Zhongguo"
+ PRC_communism:1 "Communist Zhongguo"
+ PRC_communism_DEF:1 "Communist Zhongguo"
  PRC_fascism_ADJ:0 "Chinese"
  PRC_democratic_ADJ:0 "Chinese"
  PRC_neutrality_ADJ:0 "Chinese"
  PRC_communism_ADJ:0 "Chinese"
- PRC:0 "China"
+ PRC:0 "Zhongguo"
  PRC_DEF:0 "China"
  PRC_ADJ:0 "Chinese"
  CHL_fascism:0 "Vanguard Chile"
@@ -981,12 +981,12 @@
  PRU:0 "Peru"
  PRU_DEF:0 "Peru"
  PRU_ADJ:0 "Peruvian"
- SAF_fascism:0 "Nationalist South Africa"
- SAF_fascism_DEF:0 "Nationalist South Africa"
+ SAF_fascism:0 "Nationalist Mzansi"
+ SAF_fascism_DEF:0 "Nationalist Mzansi"
  SAF_democratic:0 "Mzansi"
  SAF_democratic_DEF:0 "Mzansi"
- SAF_neutrality:0 "Unitary South Africa"
- SAF_neutrality_DEF:0 "Unitary South Africa"
+ SAF_neutrality:0 "Unitary Mzansi"
+ SAF_neutrality_DEF:0 "Unitary Mzansi"
  SAF_communism:0 "Cape Commune"
  SAF_communism_DEF:0 "the Cape Commune"
  SAF_fascism_ADJ:0 "South African"
@@ -1122,8 +1122,8 @@
  AST_subject_DEF:0 "$OVERLORDADJ$ $AST$"
  NZL_fascism:0 "Kiwi Empire"
  NZL_fascism_DEF:0 "the Kiwi Empire"
- NZL_democratic:0 "New Zealand"
- NZL_democratic_DEF:0 "New Zealand"
+ NZL_democratic:0 "Kiwi"
+ NZL_democratic_DEF:0 "Kiwi"
  NZL_neutrality:0 "Nova Zeelandia Republic"
  NZL_neutrality_DEF:0 "the Nova Zeelandia Republic"
  NZL_communism:0 "People's Republic of Aotearoa"
@@ -1150,16 +1150,16 @@
  URG:0 "Uruguay"
  URG_DEF:0 "Uruguay"
  URG_ADJ:0 "Uruguayan"
- CUB_fascism:0 "Falangist Cuba"
- CUB_fascism_DEF:0 "Falangist Cuba"
- CUB_democratic:0 "Cuba"
- CUB_democratic_DEF:0 "Cuba"
- CUB_neutrality:1 "Republic of Tropico"
- CUB_neutrality_DEF:1 "Republic of Tropico"
- CUB_ETH_neutrality_subject:0 "Imperial Cuban Territories"
- CUB_ETH_neutrality_subject_DEF:0 "The Imperial Cuban Territories"
- CUB_communism:0 "Revolutionary Cuba"
- CUB_communism_DEF:0 "Revolutionary Cuba"
+ CUB_fascism:0 "Falangist Tropico"
+ CUB_fascism_DEF:0 "Falangist Tropico"
+ CUB_democratic:0 "Republic of tropico "
+ CUB_democratic_DEF:0 "Republic of Tropico"
+ CUB_neutrality:1 "Tropico"
+ CUB_neutrality_DEF:1 "Tropico"
+ CUB_ETH_neutrality_subject:0 "Imperial Tropican Territories"
+ CUB_ETH_neutrality_subject_DEF:0 "The Tropican Territories"
+ CUB_communism:0 "Revolutionary Tropico"
+ CUB_communism_DEF:0 "Revolutionary Tropico"
  CUB_fascism_ADJ:0 "Cuban"
  CUB_democratic_ADJ:0 "Cuban"
  CUB_neutrality_ADJ:0 "Cuban"
@@ -1507,13 +1507,13 @@
  WGR_neutrality_DEF:0 "Bayern-Hannover"
  WGR_communism:0 "Socialist Republic of Bellwall"
  WGR_communism_DEF:0 "the Socialist Republic of Bellwall"
- WGR_fascism_ADJ:0 "West German"
- WGR_democratic_ADJ:0 "West German"
- WGR_neutrality_ADJ:0 "West German"
- WGR_communism_ADJ:0 "West German"
- WGR:0 "Germany"
- WGR_DEF:0 "Germany"
- WGR_ADJ:0 "West German"
+ WGR_fascism_ADJ:0 "West Kuromorimine"
+ WGR_democratic_ADJ:0 "West Kuromorimine"
+ WGR_neutrality_ADJ:0 "West Kuromorimine"
+ WGR_communism_ADJ:0 "West Bellwall"
+ WGR:0 "Kuromorimine"
+ WGR_DEF:0 "Kuromorimine"
+ WGR_ADJ:0 "West Kuromorimine"
  DDR_fascism:0 "DNSR"
  DDR_fascism_DEF:0 "the DNSR"
  DDR_democratic:0 "Constitutional Kuro"
@@ -1908,8 +1908,8 @@
  BLZ:0 "Belize"
  BLZ_DEF:0 "Belize"
  BLZ_ADJ:0 "Belizean"
- BRM_fascism:1 "Tategoto"
- BRM_fascism_DEF:1 "Tategoto"
+ BRM_fascism:1 "Greater Tategoto"
+ BRM_fascism_DEF:1 "Greater Tategoto"
  BRM_democratic:0 "Tategoto"
  BRM_democratic_DEF:0 "Tategoto"
  BRM_neutrality:1 "Tategoto"
