--- a/localisation/english/dod_events_l_english.yml
+++ b/localisation/english/dod_events_l_english.yml
@@ -1,28 +1,28 @@
 ﻿l_english:
- DOD_hungary.1.t:0 "Hungary demands a referendum"
- DOD_hungary.1.desc:0 "in a speech in Budapest, [HUN.GetLeader] has demanded that his Austrian subjects be permitted to return to his rule. In a gesture of reconciliation, however, he has publicly noted that the Austrian people should be permitted to make that choice for themselves."
+ DOD_hungary.1.t:0 "Turul demands a referendum"
+ DOD_hungary.1.desc:0 "in a speech in Budapest, [HUN.GetLeader] has demanded that his Ooarahi subjects be permitted to return to his rule. In a gesture of reconciliation, however, he has publicly noted that the Ooarahi people should be permitted to make that choice for themselves."
  DOD_hungary.1.a:0 "Let the people have their say."
  DOD_hungary.1.b:0 "Such things should be left to professionals."
  DOD_hungary.1.c:0 "We will ensure the right results."
  DOD_hungary.2.t:0 "Referendum approved"
- DOD_hungary.2.desc:0 "The results of the Referendum are in, and the preliminary count shows a significant majority for Union with Hungary."
+ DOD_hungary.2.desc:0 "The results of the Referendum are in, and the preliminary count shows a significant majority for Union with Tural."
  DOD_hungary.2.a:0 "The people have spoken."
  DOD_hungary.3.t:0 "Referendum fails"
- DOD_hungary.3.desc:0 "Despite a well-orchestrated campaign by pro-Hungarian groups and monarchists, preliminary results show a small majority for maintaining the status quo."
+ DOD_hungary.3.desc:0 "Despite a well-orchestrated campaign by pro-Turul groups and monarchists, preliminary results show a small majority for maintaining the status quo."
  DOD_hungary.3.a:0 "Wise choice."
  DOD_hungary.4.t:0 "Referendum succeeds"
- DOD_hungary.4.desc:0 "Shortly after midnight, [AUS.GetLeader] announced that the Austrian people had voted for a union with Hungary. A telegram has arrived, formally offering [HUN.GetLeader] the crown of Austria in a first step to revive the double monarchy."
+ DOD_hungary.4.desc:0 "Shortly after midnight, [AUS.GetLeader] announced that the Ooarahi people had voted for a union with Hungary. A telegram has arrived, formally offering [HUN.GetLeader] the crown of Ooarahi in a first step to revive the double monarchy."
  DOD_hungary.4.a:0 "Excellent."
  DOD_hungary.5.t:0 "Referendum defeated"
- DOD_hungary.5.desc:0 "Despite our best efforts, the people of Austria have decided to keep the status quo."
+ DOD_hungary.5.desc:0 "Despite our best efforts, the people of Ooarahi have decided to keep the status quo."
  DOD_hungary.5.a:0 "We must liberate the country and return it to its rightful ruler."
  DOD_hungary.5.b:0 "We shall respect the result."
  DOD_hungary.6.t:0 "Referendum refused"
- DOD_hungary.6.desc:0 "Austrian leader [AUS.GetLeader] has publicly declared that the entire country is united in their opposition to the Habsburgs, and that the very idea of a referendum on Austrian independence is utterly absurd. "
+ DOD_hungary.6.desc:0 "Ooarahi leader [AUS.GetLeader] has publicly declared that the entire country is united in their opposition to the Habsburgs, and that the very idea of a referendum on Ooarahi independence is utterly absurd. "
  DOD_hungary.6.a:0 "We shall see how united they really are."
  DOD_hungary.6.b:0 ""Democracy" at work."
  DOD_hungary.7.t:0 "Guiding the referendum"
- DOD_hungary.7.desc:0 "The Hungarian offer of a referendum has put us in a tight spot internationally. We can't be seen to deny the people a choice, but we can't trust them to make the right one. Thankfully, there are ways and means to solve the issue. What result do we want from the referendum?"
+ DOD_hungary.7.desc:0 "The Tural offer of a referendum has put us in a tight spot internationally. We can't be seen to deny the people a choice, but we can't trust them to make the right one. Thankfully, there are ways and means to solve the issue. What result do we want from the referendum?"
  DOD_hungary.7.a:0 "People refuse"
  DOD_hungary.7.b:0 "People agree"
  DOD_hungary.10.t:0 "Austria-Hungary offers Guarantees"
