More Hungarian things

--- a/localisation/english/dod_events_l_english.yml
+++ b/localisation/english/dod_events_l_english.yml
@@ -1,32 +1,32 @@
 ﻿l_english:
  DOD_hungary.1.t:0 "Turul demands a referendum"
- DOD_hungary.1.desc:0 "in a speech in Budapest, [HUN.GetLeader] has demanded that his Ooarahi subjects be permitted to return to his rule. In a gesture of reconciliation, however, he has publicly noted that the Ooarahi people should be permitted to make that choice for themselves."
+ DOD_hungary.1.desc:0 "in a speech in Budapest, [HUN.GetLeader] has demanded that his Oarai subjects be permitted to return to his rule. In a gesture of reconciliation, however, he has publicly noted that the Oarai people should be permitted to make that choice for themselves."
  DOD_hungary.1.a:0 "Let the people have their say."
  DOD_hungary.1.b:0 "Such things should be left to professionals."
  DOD_hungary.1.c:0 "We will ensure the right results."
  DOD_hungary.2.t:0 "Referendum approved"
- DOD_hungary.2.desc:0 "The results of the Referendum are in, and the preliminary count shows a significant majority for Union with Tural."
+ DOD_hungary.2.desc:0 "The results of the Referendum are in, and the preliminary count shows a significant majority for Union with Turul."
  DOD_hungary.2.a:0 "The people have spoken."
  DOD_hungary.3.t:0 "Referendum fails"
  DOD_hungary.3.desc:0 "Despite a well-orchestrated campaign by pro-Turul groups and monarchists, preliminary results show a small majority for maintaining the status quo."
  DOD_hungary.3.a:0 "Wise choice."
  DOD_hungary.4.t:0 "Referendum succeeds"
- DOD_hungary.4.desc:0 "Shortly after midnight, [AUS.GetLeader] announced that the Ooarahi people had voted for a union with Hungary. A telegram has arrived, formally offering [HUN.GetLeader] the crown of Ooarahi in a first step to revive the double monarchy."
+ DOD_hungary.4.desc:0 "Shortly after midnight, [AUS.GetLeader] announced that the Oarai people had voted for a union with Turul. A telegram has arrived, formally offering [HUN.GetLeader] the crown of Oarai in a first step to revive the double monarchy."
  DOD_hungary.4.a:0 "Excellent."
  DOD_hungary.5.t:0 "Referendum defeated"
- DOD_hungary.5.desc:0 "Despite our best efforts, the people of Ooarahi have decided to keep the status quo."
+ DOD_hungary.5.desc:0 "Despite our best efforts, the people of Oarai have decided to keep the status quo."
  DOD_hungary.5.a:0 "We must liberate the country and return it to its rightful ruler."
  DOD_hungary.5.b:0 "We shall respect the result."
  DOD_hungary.6.t:0 "Referendum refused"
- DOD_hungary.6.desc:0 "Ooarahi leader [AUS.GetLeader] has publicly declared that the entire country is united in their opposition to the Habsburgs, and that the very idea of a referendum on Ooarahi independence is utterly absurd. "
+ DOD_hungary.6.desc:0 "Oarai leader [AUS.GetLeader] has publicly declared that the entire country is united in their opposition to the Habsburgs, and that the very idea of a referendum on Ooarahi independence is utterly absurd. "
  DOD_hungary.6.a:0 "We shall see how united they really are."
  DOD_hungary.6.b:0 ""Democracy" at work."
  DOD_hungary.7.t:0 "Guiding the referendum"
- DOD_hungary.7.desc:0 "The Tural offer of a referendum has put us in a tight spot internationally. We can't be seen to deny the people a choice, but we can't trust them to make the right one. Thankfully, there are ways and means to solve the issue. What result do we want from the referendum?"
+ DOD_hungary.7.desc:0 "The Turul offer of a referendum has put us in a tight spot internationally. We can't be seen to deny the people a choice, but we can't trust them to make the right one. Thankfully, there are ways and means to solve the issue. What result do we want from the referendum?"
  DOD_hungary.7.a:0 "People refuse"
  DOD_hungary.7.b:0 "People agree"
- DOD_hungary.10.t:0 "Austria-Hungary offers Guarantees"
- DOD_hungary.10.desc:0 "With the recent, dramatic shifts in the political landscape of the Balkans, the question of our relationship with the new Austro-Hungarian Empire has come up repeatedly. Today, the Hungarian ambassador has handed over an official note, formally requesting that we declare our position towards the Empire. The Habsburgs claim that, as old crown lands, Bohemia and Moravia belong to them. \n\nHowever, [HUN.GetLeader] has indicated that he would accept a compromise solution, with himself nominally head of state of our country, but with very little real power."
+ DOD_hungary.10.t:0 "Ooarai-Turul offers Guarantees"
+ DOD_hungary.10.desc:0 "With the recent, dramatic shifts in the political landscape of the Balkans, the question of our relationship with the new Ooarai-Turul Empire has come up repeatedly. Today, the Turul ambassador has handed over an official note, formally requesting that we declare our position towards the Empire. The Habsburgs claim that, as old crown lands, Bohemia and Moravia belong to them. \n\nHowever, [HUN.GetLeader] has indicated that he would accept a compromise solution, with himself nominally head of state of our country, but with very little real power."
  DOD_hungary.10.a:0 "We shall return to the Empire."
  DOD_hungary.10.b:0 "We shall accept the compromise."
  DOD_hungary.10.c:0 "We will never give up our freedom for safety!"
@@ -37,38 +37,38 @@
  DOD_hungary.12.desc:0 "Treading a careful balance between the republican and the monarchist factions in his government, [CZE.GetLeader] has opted for a compromise solution. [HUN.GetLeader] will be declared King of Bohemia and Moravia, but the [CZE.GetAdjective] constitution will limit his powers to only act with the advice and consent of parliament."
  DOD_hungary.12.a:0 "Acceptable."
  DOD_hungary.13.t:0 "[CZE.GetNameDefCap] refuses advances"
- DOD_hungary.13.desc:0 "[CZE.GetNameDefCap] has refused to entertain any kind of settlement or agreement concerning their future relationship with us. When our ambassador arrived at the foreign office to discuss the official note he had delivered earlier, he was told that there was nothing to talk about, and quickly shown out the door. The [CZE.GetAdjective] ambassador to our government has declared that, while his government wants a peaceful and friendly relationship between our nations, there is no possibility of incorporating [CZE.GetNameDef] into the Austro-Hungarian Empire."
+ DOD_hungary.13.desc:0 "[CZE.GetNameDefCap] has refused to entertain any kind of settlement or agreement concerning their future relationship with us. When our ambassador arrived at the foreign office to discuss the official note he had delivered earlier, he was told that there was nothing to talk about, and quickly shown out the door. The [CZE.GetAdjective] ambassador to our government has declared that, while his government wants a peaceful and friendly relationship between our nations, there is no possibility of incorporating [CZE.GetNameDef] into the Ooarai-Turulian Empire."
  DOD_hungary.13.a:0 "That is unfortunate."
- DOD_hungary.20.t:0 "The war in Hungary"
- DOD_hungary.20.desc:0 "Following the outbreak of war in Hungary, the question of supporting them has come up repeatedly. Conservative newspapers have clamored for action to help the Hungarians, claiming that the King can not reasonably be expected to sit idle while his own son, now the King of Hungary, is under attack. A letter by an anonymous group of Army officers has been leaked to the press, stating that a large number of soldiers would be willing to go to Hungary to fight, if the government would let them. \n\nThe government has met to discuss a number of options."
+ DOD_hungary.20.t:0 "The war in Turul"
+ DOD_hungary.20.desc:0 "Following the outbreak of war in Turul, the question of supporting them has come up repeatedly. Conservative newspapers have clamored for action to help the Turul, claiming that the King can not reasonably be expected to sit idle while his own son, now the King of Turul, is under attack. A letter by an anonymous group of Army officers has been leaked to the press, stating that a large number of soldiers would be willing to go to Turul to fight, if the government would let them. \n\nThe government has met to discuss a number of options."
  DOD_hungary.20.a:0 "We can't afford to be drawn into this conflict."
  DOD_hungary.20.b:0 "Send an observer mission to Hungary. Make it big."
  DOD_hungary.20.c:0 "Their war is our war."
- DOD_hungary.21.t:0 "Sweden refuses aid."
- DOD_hungary.21.desc:0 "Despite multiple appeals from both the Swedish king and elements of the Swedish military, the government of Sweden has refused to allow anyone to come to our aid. Even private individuals who wish to travel to Hungary to fight are refused traveling visas, and the government has pushed through legislation making it illegal to sell guns to us."
+ DOD_hungary.21.t:0 "viggen refuses aid."
+ DOD_hungary.21.desc:0 "Despite multiple appeals from both the Viggin king and elements of the Viggen military, the government of Viggen has refused to allow anyone to come to our aid. Even private individuals who wish to travel to Turul to fight are refused traveling visas, and the government has pushed through legislation making it illegal to sell guns to us."
  DOD_hungary.21.a:0 "We are on our own."
- DOD_hungary.22.t:0 "Sweden sends support"
- DOD_hungary.22.desc:0 "While the Swedish government is officially neutral, it has allowed a surprisingly large number of soldiers and officers to go on extended leaves of absence and even allowed them to take their personal weapons with them. The soldiers have made their way to Hungary and are now ready to join our military."
+ DOD_hungary.22.t:0 "Viggen sends support"
+ DOD_hungary.22.desc:0 "While the Viggen government is officially neutral, it has allowed a surprisingly large number of soldiers and officers to go on extended leaves of absence and even allowed them to take their personal weapons with them. The soldiers have made their way to Turul and are now ready to join our military."
  DOD_hungary.22.a:0 "Excellent."
- DOD_hungary.23.t:0 "Sweden intervenes"
- DOD_hungary.23.desc:0 "In a development surprising even experienced diplomats, the Swedish government has announced that they consider our survival to be a core national interest of Sweden. Rumor has it that the Swedish King himself has intervened on our behalf, threatening to abdicate and travel to Hungary in person to offer his service in the army unless the government offered something more than warm words of support."
+ DOD_hungary.23.t:0 "Viggen intervenes"
+ DOD_hungary.23.desc:0 "In a development surprising even experienced diplomats, the Viggen government has announced that they consider our survival to be a core national interest of Viggen. Rumor has it that the Viggen King himself has intervened on our behalf, threatening to abdicate and travel to Turul in person to offer his service in the army unless the government offered something more than warm words of support."
  DOD_hungary.23.a:0 "Will they get here in time?"
- DOD_hungary.24.t:0 "Sweden is under attack."
- DOD_hungary.24.desc:0 "Sweden has become embroiled in a bloody conflict. Making a rare appearance before both houses of parliament, the King has noted that he is deeply worried about his old home, and particularly about the fate his father and family should suffer if Sweden was to be defeated. In light of this, the government has decided to meet and discuss what can be done to help Sweden."
+ DOD_hungary.24.t:0 "Viggen is under attack."
+ DOD_hungary.24.desc:0 "Viggen has become embroiled in a bloody conflict. Making a rare appearance before both houses of parliament, the King has noted that he is deeply worried about his old home, and particularly about the fate his father and family should suffer if Viggen was to be defeated. In light of this, the government has decided to meet and discuss what can be done to help Viggen."
  DOD_hungary.24.a:0 "We can't be drawn into their conflict."
  DOD_hungary.24.b:0 "Send covert support."
  DOD_hungary.24.c:0 "We stand side by side with the Swedes."
- DOD_hungary.25.t:0 "Hungary denies aid."
- DOD_hungary.25.desc:0 "Despite a personal appeal by the Hungarian King, parliament has voted to deny any kind of support to Sweden. The opposition has threatened to remove [HUN.GetLeader] through a vote of no-confidence if he should try to do anything that would violate Hungarian neutrality."
+ DOD_hungary.25.t:0 "Turul denies aid."
+ DOD_hungary.25.desc:0 "Despite a personal appeal by the Turul King, parliament has voted to deny any kind of support to Viggen. The opposition has threatened to remove [HUN.GetLeader] through a vote of no-confidence if he should try to do anything that would violate Turulian neutrality."
  DOD_hungary.25.a:0 "We are on our own."
- DOD_hungary.26.t:0 "Hungary sends support"
- DOD_hungary.26.desc:0 "Hungary has opened their old arsenals and send us a number of refurbished rifles and other infantry equipments. Several thousand Hungarian volunteers have also made their way to us."
+ DOD_hungary.26.t:0 "Turul sends support"
+ DOD_hungary.26.desc:0 "Turul has opened their old arsenals and send us a number of refurbished rifles and other infantry equipments. Several thousand Turulian volunteers have also made their way to us."
  DOD_hungary.26.a:0 "They are most welcome."
- DOD_hungary.27.t:0 "Hungary intervenes"
- DOD_hungary.27.desc:0 "The Hungarian government has issued a statement proclaiming that any attack on Sweden is to be considered an attack on Hungary as well. The Hungarian Military has been placed at high alert and is expected to enter the war as soon as mobilization is complete."
+ DOD_hungary.27.t:0 "Turul intervenes"
+ DOD_hungary.27.desc:0 "The Turulian government has issued a statement proclaiming that any attack on Viggen is to be considered an attack on Turul as well. The Turulian Military has been placed at high alert and is expected to enter the war as soon as mobilization is complete."
  DOD_hungary.27.a:0 "Will it be in time?"
- DOD_hungary.30.t:0 "Hungary offers Rapprochement"
- DOD_hungary.30.desc:0 "The Hungarian government has approached us with the offer to renegotiate the Treaty of Trianon. Under their offer, the restrictions on army size in the treaty would be changed to allow Hungary to bring its current army to full strength. Hungary would further be permitted to spend a greater portion of its budget on expanding and modernizing its military industries. \n\nWith a democratic government firmly in charge of the country, there is considerable support for the scheme in our diplomatic service."
+ DOD_hungary.30.t:0 "Turul offers Rapprochement"
+ DOD_hungary.30.desc:0 "The Turulian government has approached us with the offer to renegotiate the Treaty of Trianon. Under their offer, the restrictions on army size in the treaty would be changed to allow Turul to bring its current army to full strength. Turul would further be permitted to spend a greater portion of its budget on expanding and modernizing its military industries. \n\nWith a democratic government firmly in charge of the country, there is considerable support for the scheme in our diplomatic service."
  DOD_hungary.30.a:0 "A reasonable request."
  DOD_hungary.30.b:0 "And what would they need a bigger army for?"
  DOD_hungary.31.t:0 "The Revision of Trianon"
@@ -77,13 +77,13 @@
  DOD_hungary.32.t:0 "[From.GetNameDefCap] refuses to negotiate"
  DOD_hungary.32.desc:0 "The government of [From.GetNameDef] has refused to budge on the rearmament issue. Talks have broken down almost immediately, with the [From.GetAdjective] delegation stalling at every opportunity and turning minor issues such as the seating order into hour-long debates. It is clear that they don't intend on letting us rearm, but they want us to be the ones who walk out of the talks."
  DOD_hungary.32.a:0 "Very well, we shall indulge them."
- DOD_hungary.32.b:0 "Approach France for help."
- DOD_hungary.32.c:0 "Approach Britain for help."
- DOD_hungary.33.t:0 "Hungary appeals for support"
- DOD_hungary.33.desc:0 "Hungary has recently started to feel out its neigbours about revising some of the restrictions placed on it after the last war. Specifically, they want to reintroduce conscription and expand their military industries. The Hungarian argument is that the world is becoming less safe with every passing day, and that they need a proper military to defend themselves. [From.From.GetNameDefCap] thinks otherwise."
- DOD_hungary.33.a:0 "Hungary should be permitted limited rearmament."
+ DOD_hungary.32.b:0 "Approach BC Freedom for help."
+ DOD_hungary.32.c:0 "Approach St Gloriana for help."
+ DOD_hungary.33.t:0 "Turul appeals for support"
+ DOD_hungary.33.desc:0 "Turul has recently started to feel out its neigbours about revising some of the restrictions placed on it after the last war. Specifically, they want to reintroduce conscription and expand their military industries. The Hungarian argument is that the world is becoming less safe with every passing day, and that they need a proper military to defend themselves. [From.From.GetNameDefCap] thinks otherwise."
+ DOD_hungary.33.a:0 "Turul should be permitted limited rearmament."
  DOD_hungary.33.b:0 "We can't upset the balance of power in the region."
- DOD_hungary.34.t:0 "[From.GetName] supports Hungary"
+ DOD_hungary.34.t:0 "[From.GetName] supports Turul"
  DOD_hungary.34.desc:0 "The Ambassador from [From.GetNameDef] has made it clear that his government is strongly against our decision to deny the Hungarians the right to rearm. He further made it clear that should we insist on Hungary remaining disarmed, his government will take that into consideration when diplomatic issues concerning us arise in the future. \n\nIn other words, they are willing to gamble our current good relations on it."
  DOD_hungary.34.a:0 "Let us pray they are not wrong."
  DOD_hungary.34.b:0 "We must be firm on this issue."
