--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -46,17 +46,17 @@
  ENG_communism_subject_DEF:0 "the Socialist Republic of Gloriana"
  ENG_SOV_communism_subject:0 "Gloriana Soviet Socialist Republic"
  ENG_SOV_communism_subject_DEF:0 "the Gloriana Soviet Socialist Republic"
- SOV_fascism:0 "Pravda"
- SOV_fascism_DEF:0 "Pravda"
- SOV_democratic:0 "Pravda"
- SOV_democratic_DEF:0 "Pravda"
- SOV_neutrality:0 "Pravda"
- SOV_neutrality_DEF:0 "Pravda"
+ SOV_fascism:0 "Rossiyskaya"
+ SOV_fascism_DEF:0 "Rossiyskaya"
+ SOV_democratic:0 "Republic of Rossija"
+ SOV_democratic_DEF:0 "republic of Rossija"
+ SOV_neutrality:0 "Rossija"
+ SOV_neutrality_DEF:0 "Rossija"
  SOV_communism:0 "Pravda"
  SOV_communism_DEF:0 "Pravda"
- SOV_fascism_ADJ:0 "Pravdaist"
- SOV_democratic_ADJ:0 "Pravdaist"
- SOV_neutrality_ADJ:0 "Pravdaist"
+ SOV_fascism_ADJ:0 "Rossiyskaian"
+ SOV_democratic_ADJ:0 "Rossijian"
+ SOV_neutrality_ADJ:0 "Rossijian"
  SOV_communism_ADJ:0 "Pravdaist"
  SOV_autonomy_dominion:0 "Pravdan Dominion"
  SOV_autonomy_dominion_DEF:0 "the Pravdan Dominion"
@@ -65,8 +65,8 @@
  SOV_autonomy_integrated_puppet:0 "Pravdan Protectorate"
  SOV_autonomy_integrated_puppet_DEF:0 "the Pravdan Protectorate"
  SOV_autonomy_puppet:0 "$OVERLORDADJ$ Pravda"
- SOV_autonomy_puppet_DEF:0 "$OVERLORDADJ$ Pravda"
- SOV_autonomy_reichskommissariat:0 "Reichskommissariat pravda"
+ SOV_autonomy_puppet_DEF:0 "$OVERLORDADJ$ Rossija"
+ SOV_autonomy_reichskommissariat:0 "Reichskommissariat Rossija"
  SOV_autonomy_reichskommissariat_DEF:0 "the Reichskommissariat Pravda"
  SOV_GER_fascism_autonomy_reichskommissariat:0 "Reichskommissariat Muscovien"
  SOV_GER_fascism_autonomy_reichskommissariat_DEF:0 "Reichskommissariat Muscovien"
@@ -187,14 +187,14 @@
  HOL_subject_DEF:0 "$OVERLORDADJ$ $HOL$"
  HOL_FRA_democratic_subject:0 "Batavian Republic"
  HOL_FRA_democratic_subject_DEF:0 "the Batavian Republic"
- CZE_fascism:0 "Gregor"
- CZE_fascism_DEF:0 "Gregor"
+ CZE_fascism:0 "Greater Gregor"
+ CZE_fascism_DEF:0 "Greater Gregor"
  CZE_democratic:0 "Gregor"
  CZE_democratic_DEF:0 "Gregor"
  CZE_neutrality:0 "Gregor"
  CZE_neutrality_DEF:0 "Gregor"
- CZE_communism:0 "Gregor"
- CZE_communism_DEF:0 "Gregor"
+ CZE_communism:0 "Peoples Republic of Gregor"
+ CZE_communism_DEF:0 "Soviet Gregor"
  CZE_fascism_ADJ:0 "Gregorian"
  CZE_democratic_ADJ:0 "Gregorian"
  CZE_neutrality_ADJ:0 "Gregorian"
@@ -545,13 +545,13 @@
  HUN_neutrality_DEF:1 "the Kingdom of Turul"
  HUN_communism:0 "Goulash People's Republic"
  HUN_communism_DEF:0 "the Goulash People's Republic"
- HUN_fascism_ADJ:0 "Hungarian"
- HUN_democratic_ADJ:0 "Hungarian"
- HUN_neutrality_ADJ:0 "Hungarian"
- HUN_communism_ADJ:0 "Hungarian"
- HUN:0 "Hungary"
+ HUN_fascism_ADJ:0 "Turulian"
+ HUN_democratic_ADJ:0 "Turulian"
+ HUN_neutrality_ADJ:0 "Turulian"
+ HUN_communism_ADJ:0 "Turulian"
+ HUN:0 "Tural"
  HUN_DEF:0 "Turul"
- HUN_ADJ:0 "Hungarian"
+ HUN_ADJ:0 "Turulian"
  HUN_subject:0 "$OVERLORDADJ$ $HUN$"
  HUN_subject_DEF:0 "$OVERLORDADJ$ $HUN$"
  AFG_fascism:1 "New Afghan Empire"
@@ -628,13 +628,13 @@
  CAN_neutrality_DEF:0 "the Free Maple Republic"
  CAN_communism:0 "Maple Popular State"
  CAN_communism_DEF:0 "the Maple Popular State"
- CAN_fascism_ADJ:0 "Canadian"
- CAN_democratic_ADJ:0 "Canadian"
- CAN_neutrality_ADJ:0 "Canadian"
- CAN_communism_ADJ:0 "Canadian"
+ CAN_fascism_ADJ:0 "Canucks"
+ CAN_democratic_ADJ:0 "Canucks"
+ CAN_neutrality_ADJ:0 "Canucks"
+ CAN_communism_ADJ:0 "Canuck"
  CAN:0 "Maple"
- CAN_DEF:0 "Canada"
- CAN_ADJ:0 "Canadian"
+ CAN_DEF:0 "Maple"
+ CAN_ADJ:0 "Canuck"
  CHI_fascism:0 "Reorganized Nationalist Zhongguo"
  CHI_fascism_DEF:0 "Reorganized Nationalist Zhongguo"
  CHI_democratic:0 "Republic of Zhongguo"
