--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -268,24 +268,24 @@
  CZE_ONLY_fascism_DEF:0 "the Bohemian Empire"
  CZE_ONLY_communism:0 "Czech People's Republic"
  CZE_ONLY_communism_DEF:0 "the Czech People's Republic"
- HUN_EMPIRE_neutrality:0 "Austria-Hungary"
- HUN_EMPIRE_fascism:0 "Austro-Hungarian Empire"
- HUN_EMPIRE_democratic:0 "Danubian Confederation"
+ HUN_EMPIRE_neutrality:0 "Ooarai-Turulian"
+ HUN_EMPIRE_fascism:0 "Ooarai-Turulian Empire"
+ HUN_EMPIRE_democratic:0 "Magyarorszag Confederation"
  HUN_EMPIRE_communism:0 "Association of Autonomous States"
- HUN_GREATER_neutrality:0 "Greater Hungary"
- HUN_GREATER_fascism:0 "Greater Hungary"
- HUN_GREATER_democratic:0 "Hungarian Federal Republic"
+ HUN_GREATER_neutrality:0 "Greater Turul"
+ HUN_GREATER_fascism:0 "Greater Magyarorszag"
+ HUN_GREATER_democratic:0 "Turulian Federal Republic"
  HUN_GREATER_communism:0 "Balkan Socialist Union"
- HUN_EMPIRE_neutrality_DEF:0 "Austria-Hungary"
- HUN_EMPIRE_fascism_DEF:0 "the Austro-Hungarian Empire"
+ HUN_EMPIRE_neutrality_DEF:0 "Ooarai-Turulia"
+ HUN_EMPIRE_fascism_DEF:0 "the Ooarai-Turulian Empire"
  HUN_EMPIRE_democratic_DEF:0 "the Danubian Confederation"
  HUN_EMPIRE_communism_DEF:0 "the Association of Autonomous States"
- HUN_GREATER_neutrality_DEF:0 "Greater Hungary"
- HUN_GREATER_fascism_DEF:0 "Greater Hungary"
- HUN_GREATER_democratic_DEF:0 "the Hungarian Federal Republic"
+ HUN_GREATER_neutrality_DEF:0 "Greater Turul"
+ HUN_GREATER_fascism_DEF:0 "Greater Turul"
+ HUN_GREATER_democratic_DEF:0 "the Turulian Federal Republic"
  HUN_GREATER_communism_DEF:0 "the Balkan Socialist Union"
- HUN_MONARCHY_democratic:0 "Kingdom of Hungary"
- HUN_MONARCHY_fascism:0 "Kingdom of Hungary"
+ HUN_MONARCHY_democratic:0 "Kingdom of Turul"
+ HUN_MONARCHY_fascism:0 "Kingdom of Turul"
  LBA_ITA_fascism_autonomy_dominion:0 "Kingdom of Libya"
  LBA_ITA_fascism_autonomy_colony:0 "Libya"
  LBA_ITA_fascism_autonomy_puppet:0 "Cyrenica"
