fixed one french city nmae

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -60,7 +60,7 @@
  VICTORY_POINTS_575:0 "Dunkerque"
  VICTORY_POINTS_620:0 "Limoges"
  VICTORY_POINTS_678:0 "Mulhouse"
- VICTORY_POINTS_512:0 "Orleans"
+ VICTORY_POINTS_512:0 "Orléans"
  VICTORY_POINTS_3552:0 "Brest"
  VICTORY_POINTS_3594:0 "Vichy"
  VICTORY_POINTS_3652:0 "Dijon"
@@ -125,7 +125,7 @@
  VICTORY_POINTS_11746:0 "Adana"
  VICTORY_POINTS_11747:0 "Ankara"
  VICTORY_POINTS_12029:0 "Antakya"
- VICTORY_POINTS_9833:0 "Istanbul"
+ VICTORY_POINTS_9833:0 "Istanbul" #rip constantinople
  VICTORY_POINTS_9861:0 "Konya"
  VICTORY_POINTS_947:0 "Bursa"
  VICTORY_POINTS_4112:0 "Izmir"
@@ -205,7 +205,7 @@
  VICTORY_POINTS_525:0 "Kiev"
  VICTORY_POINTS_3529:0 "Nonnagrad"
  VICTORY_POINTS_3151:0 "Katyushagrad"
- VICTORY_POINTS_6474:0 "Stalino"
+ VICTORY_POINTS_6474:0 "Stalino" #why not katyushno
  VICTORY_POINTS_9417:0 "Rostov"
  VICTORY_POINTS_11375:1 "Gorky"
  VICTORY_POINTS_117:0 "Novgorod"
