--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -205,7 +205,7 @@
  VICTORY_POINTS_525:0 "Kiev"
  VICTORY_POINTS_3529:0 "Nonnagrad"
  VICTORY_POINTS_3151:0 "Katyushagrad"
- VICTORY_POINTS_6474:0 "Stalino" #why not katyushno
+ VICTORY_POINTS_6474:0 "Katyushno" #why not katyushno
  VICTORY_POINTS_9417:0 "Rostov"
  VICTORY_POINTS_11375:1 "Gorky"
  VICTORY_POINTS_117:0 "Novgorod"
