--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -90,4 +90,5 @@
  LOADING_TIP_88:0 "The most important lessons in life are all condensed into Sensha-do.\n- Mika"
  LOADING_TIP_89:0 "Can we not fight over trivial things? The cake will go bad.\n- Marie"
  LOADING_TIP_90:0 "I wonder which would happen first, Me finishing the cake, or their white flag popping up?\n -Marie"
+ LOADING_TIP_91:0 "Yup.\n- Maho" #nope
  
